pkg: update deps. remove build.

--- a/package.json
+++ b/package.json
@@ -2,13 +2,6 @@
   "name": "bzmq",
   "version": "0.1.0",
   "description": "Bitcoin notification bike-shed",
-  "license": "MIT",
-  "repository": "git://github.com/bcoin-org/bzmq.git",
-  "homepage": "https://github.com/bcoin-org/bzmq",
-  "bugs": {
-    "url": "https://github.com/bcoin-org/bzmq/issues"
-  },
-  "author": "Christopher Jeffrey <chjjeffrey@gmail.com>",
   "keywords": [
     "bcoin",
     "bitcoin",
@@ -16,38 +9,27 @@
     "zmq",
     "zeromq"
   ],
-  "engines": {
-    "node": ">=8.0.0"
+  "license": "MIT",
+  "repository": "git://github.com/bcoin-org/bzmq.git",
+  "homepage": "https://github.com/bcoin-org/bzmq",
+  "bugs": {
+    "url": "https://github.com/bcoin-org/bzmq/issues"
+  },
+  "author": "Christopher Jeffrey <chjjeffrey@gmail.com>",
+  "main": "./lib/zmq.js",
+  "scripts": {
+    "lint": "eslint lib/ || exit 0",
+    "test": "mocha --reporter spec test/*-test.js"
   },
   "dependencies": {
+    "bsert": "~0.0.3",
     "zeromq": "~4.6.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babelify": "^8.0.0",
-    "browserify": "^16.2.2",
-    "eslint": "^4.19.1",
-    "mocha": "^5.2.0",
-    "uglify-es": "^3.3.9",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.11.1",
-    "webpack-cli": "^3.0.3"
+    "eslint": "^5.1.0",
+    "mocha": "^5.2.0"
   },
-  "main": "./lib/zmq.js",
-  "scripts": {
-    "browserify": "browserify -s bzmq lib/bzmq.js | uglifyjs -c > bzmq.js",
-    "clean": "rm -f bzmq.js",
-    "lint": "eslint lib/ test/ || exit 0",
-    "test": "mocha --reporter spec test/*-test.js",
-    "webpack": "webpack --mode production --config webpack.config.js"
-  },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
+  "engines": {
+    "node": ">=8.0.0"
   }
 }
