--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   "main": "./lib/zmq.js",
   "scripts": {
     "lint": "eslint lib/ || exit 0",
-    "test": "mocha --reporter spec test/*-test.js"
+    "test": "bmocha --reporter spec test/*-test.js"
   },
   "dependencies": {
     "bsert": "~0.0.4",
     "zeromq": "~4.6.0"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "bmocha": "^0.1.0"
   },
   "engines": {
     "node": ">=8.0.0"
