--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "author": "Christopher Jeffrey <chjjeffrey@gmail.com>",
   "main": "./lib/zmq.js",
   "scripts": {
+    "install": "cd vendor/zeromq && node scripts/preinstall.js && node-gyp rebuild",
     "lint": "eslint lib/ || exit 0",
     "test": "bmocha --reporter spec test/*-test.js"
   },
   "dependencies": {
     "bsert": "~0.0.5",
-    "zeromq": "~4.6.0"
+    "nan": "~2.11.1"
   },
   "devDependencies": {
     "bmocha": "^0.1.0"
