--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,19 @@
+.babel*
+.bmocharc*
+.bpkgignore
+.editorconfig
+.eslint*
 .git*
+.mocharc*
+.yarnignore
 bench/
-docs/
 build/
-vendor/zeromq/build/
-vendor/zeromq/zmq/
-test/
+docs/
 node_modules/
 npm-debug.log
 package-lock.json
+test/
+vendor/zeromq/build/
+vendor/zeromq/zmq/
+webpack.*.js
+yarn.lock
